remove hello world and rotate ticks 45 deg

--- a/preprocess_missing.ipynb
+++ b/preprocess_missing.ipynb
@@ -2360,9 +2360,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bitbaseconda56a09cc4ff6643b9bfc821cfaccde2cf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2374,7 +2374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
