--- a/preprocess_missing.ipynb
+++ b/preprocess_missing.ipynb
@@ -90,7 +90,7 @@
     "    # compile using re\n",
     "    label = re.compile(\"^{}:\".format(label))\n",
     "    next_label = re.compile(\"^{}:\".format(next_label))\n",
-    "    cats = re.compile(\"\\s+([A-Za-z0-9.,]+)\\s+\")\n",
+    "    cats = re.compile(\"\\s+([A-Za-z0-9]+)\\s+\")\n",
     "\n",
     "    # algorithm start\n",
     "    with open(\"_database/Input/data_description.txt\") as desc:\n",
