Revert "Linear regression and onehotencoding problem"
This reverts commit eca550d481810cf5192b666ae3fb9af54f980964.

--- a/preprocess_missing.ipynb
+++ b/preprocess_missing.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.git', '.ipynb_checkpoints', 'EDA.ipynb', 'LinearRegression_2-features.ipynb', 'main.py', 'preprocess_missing.ipynb', 'Questions.txt', 'Untitled.ipynb', '_database', '_lib']\n"
+      "['.ipynb_checkpoints', 'main.py', 'preprocess_missing.ipynb', 'Untitled.ipynb', '_database', '_lib']\n"
      ]
     }
    ],
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_instruction(label, output = True):\n",
+    "def get_instruction(label):\n",
     "    \n",
     "    col_names = df.columns\n",
-    "    list_cat = []\n",
+    "    \n",
     "    \n",
     "    # input check\n",
     "    if (not label in col_names) | (label == \"SalePrice\"):\n",
@@ -90,7 +90,6 @@
     "    # compile using re\n",
     "    label = re.compile(\"^{}:\".format(label))\n",
     "    next_label = re.compile(\"^{}:\".format(next_label))\n",
-    "    cats = re.compile(\"\\s+([A-Za-z0-9]+)\\s+\")\n",
     "\n",
     "    # algorithm start\n",
     "    with open(\"_database/Input/data_description.txt\") as desc:\n",
@@ -102,11 +101,7 @@
     "            line = desc.readline()\n",
     "\n",
     "            if label.search(line):\n",
-    "                if output:\n",
-    "                    pass\n",
-    "                else:\n",
-    "                    print(line, end = \"\")\n",
-    "                \n",
+    "                print(line, end = \"\")\n",
     "\n",
     "                while True:\n",
     "                    line = desc.readline()\n",
@@ -117,14 +112,9 @@
     "                        finish = True\n",
     "                        break\n",
     "                    else:\n",
-    "                        if output:\n",
-    "                            if cats.search(line):\n",
-    "                                match = re.search(cats, line)\n",
-    "                                list_cat.append(match.group(1))\n",
-    "                        else:\n",
-    "                            print(line, end = \"\")\n",
+    "                        print(line, end = \"\")\n",
     "                    \n",
-    "    return list_cat"
+    "    return "
    ]
   },
   {
@@ -2384,7 +2374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
