create create_output.py so we can just use function output to generate output file .csv

--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1460, 80)\n",
-      "(1460, 80)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -39,6 +30,7 @@
     "from _lib.preprocess import preprocess_missing as prep\n",
     "from _lib.preprocess import get_instruction as info\n",
     "from _lib.preprocess_test import preprocess_missing as prep_test\n",
+    "from _lib.create_output import output\n",
     "\n",
     "df = pd.read_csv(\"_database/Input/train.csv\", index_col = 0)\n",
     "\n",
@@ -238,118 +230,6 @@
    "outputs": [],
    "source": [
     "y_pred = linreg.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SalePrice</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Id</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1461</th>\n",
-       "      <td>115606.061790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1462</th>\n",
-       "      <td>162037.410468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1463</th>\n",
-       "      <td>191196.297657</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1464</th>\n",
-       "      <td>196578.742849</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1465</th>\n",
-       "      <td>208611.067091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2915</th>\n",
-       "      <td>85092.360143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2916</th>\n",
-       "      <td>78062.891973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2917</th>\n",
-       "      <td>178319.168491</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2918</th>\n",
-       "      <td>116931.862866</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2919</th>\n",
-       "      <td>220431.484930</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1459 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          SalePrice\n",
-       "Id                 \n",
-       "1461  115606.061790\n",
-       "1462  162037.410468\n",
-       "1463  191196.297657\n",
-       "1464  196578.742849\n",
-       "1465  208611.067091\n",
-       "...             ...\n",
-       "2915   85092.360143\n",
-       "2916   78062.891973\n",
-       "2917  178319.168491\n",
-       "2918  116931.862866\n",
-       "2919  220431.484930\n",
-       "\n",
-       "[1459 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# write to csv files for submission\n",
-    "result = pd.DataFrame(data = y_pred, index = test.index, columns = [\"SalePrice\"])\n",
-    "result"
    ]
   },
   {
