--- a/Pipelines_ML.ipynb
+++ b/Pipelines_ML.ipynb
@@ -169,9 +169,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('Anaconda': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bitanacondavirtualenv3112598a5a1641f1908bd00b02041633"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -183,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
