--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "from sklearn.preprocessing import FunctionTransformer\n",
     "from sklearn.pipeline import FeatureUnion\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import Imputer\n",
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -43,12 +44,400 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSSubClass</th>\n",
+       "      <th>MSZoning</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>Street</th>\n",
+       "      <th>Alley</th>\n",
+       "      <th>LotShape</th>\n",
+       "      <th>LandContour</th>\n",
+       "      <th>Utilities</th>\n",
+       "      <th>LotConfig</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ScreenPorch</th>\n",
+       "      <th>PoolArea</th>\n",
+       "      <th>PoolQC</th>\n",
+       "      <th>Fence</th>\n",
+       "      <th>MiscFeature</th>\n",
+       "      <th>MiscVal</th>\n",
+       "      <th>MoSold</th>\n",
+       "      <th>YrSold</th>\n",
+       "      <th>SaleType</th>\n",
+       "      <th>SaleCondition</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>8450</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>FR2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>11250</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>70</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>9550</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Corner</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Abnorml</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>14260</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>FR2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1456</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>7917</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1457</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>13175</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>MnPrv</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1458</td>\n",
+       "      <td>70</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>9042</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>GdPrv</td>\n",
+       "      <td>Shed</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1459</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>9717</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1460</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>9937</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1460 rows × 79 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape  \\\n",
+       "Id                                                                     \n",
+       "1            60       RL         65.0     8450   Pave    NA      Reg   \n",
+       "2            20       RL         80.0     9600   Pave    NA      Reg   \n",
+       "3            60       RL         68.0    11250   Pave    NA      IR1   \n",
+       "4            70       RL         60.0     9550   Pave    NA      IR1   \n",
+       "5            60       RL         84.0    14260   Pave    NA      IR1   \n",
+       "...         ...      ...          ...      ...    ...   ...      ...   \n",
+       "1456         60       RL         62.0     7917   Pave    NA      Reg   \n",
+       "1457         20       RL         85.0    13175   Pave    NA      Reg   \n",
+       "1458         70       RL         66.0     9042   Pave    NA      Reg   \n",
+       "1459         20       RL         68.0     9717   Pave    NA      Reg   \n",
+       "1460         20       RL         75.0     9937   Pave    NA      Reg   \n",
+       "\n",
+       "     LandContour Utilities LotConfig  ... ScreenPorch PoolArea PoolQC  Fence  \\\n",
+       "Id                                    ...                                      \n",
+       "1            Lvl    AllPub    Inside  ...           0        0     NA     NA   \n",
+       "2            Lvl    AllPub       FR2  ...           0        0     NA     NA   \n",
+       "3            Lvl    AllPub    Inside  ...           0        0     NA     NA   \n",
+       "4            Lvl    AllPub    Corner  ...           0        0     NA     NA   \n",
+       "5            Lvl    AllPub       FR2  ...           0        0     NA     NA   \n",
+       "...          ...       ...       ...  ...         ...      ...    ...    ...   \n",
+       "1456         Lvl    AllPub    Inside  ...           0        0     NA     NA   \n",
+       "1457         Lvl    AllPub    Inside  ...           0        0     NA  MnPrv   \n",
+       "1458         Lvl    AllPub    Inside  ...           0        0     NA  GdPrv   \n",
+       "1459         Lvl    AllPub    Inside  ...           0        0     NA     NA   \n",
+       "1460         Lvl    AllPub    Inside  ...           0        0     NA     NA   \n",
+       "\n",
+       "     MiscFeature MiscVal MoSold YrSold  SaleType  SaleCondition  \n",
+       "Id                                                               \n",
+       "1             NA       0      2   2008        WD         Normal  \n",
+       "2             NA       0      5   2007        WD         Normal  \n",
+       "3             NA       0      9   2008        WD         Normal  \n",
+       "4             NA       0      2   2006        WD        Abnorml  \n",
+       "5             NA       0     12   2008        WD         Normal  \n",
+       "...          ...     ...    ...    ...       ...            ...  \n",
+       "1456          NA       0      8   2007        WD         Normal  \n",
+       "1457          NA       0      2   2010        WD         Normal  \n",
+       "1458        Shed    2500      5   2010        WD         Normal  \n",
+       "1459          NA       0      4   2010        WD         Normal  \n",
+       "1460          NA       0      6   2008        WD         Normal  \n",
+       "\n",
+       "[1460 rows x 79 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3,\n",
-    "#                                                   random_state = 10)"
+    "X"
    ]
   },
   {
@@ -60,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,27 +499,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,20 +544,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -231,20 +585,13 @@
    "source": [
     "y_pred = linreg.predict(X_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('Anaconda': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bitanacondavirtualenv3112598a5a1641f1908bd00b02041633"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -256,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
