--- a/preprocess_train.ipynb
+++ b/preprocess_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bmh', 'classic', 'dark_background', 'fast', 'fivethirtyeight', 'ggplot', 'grayscale', 'seaborn-bright', 'seaborn-colorblind', 'seaborn-dark-palette', 'seaborn-dark', 'seaborn-darkgrid', 'seaborn-deep', 'seaborn-muted', 'seaborn-notebook', 'seaborn-paper', 'seaborn-pastel', 'seaborn-poster', 'seaborn-talk', 'seaborn-ticks', 'seaborn-white', 'seaborn-whitegrid', 'seaborn', 'Solarize_Light2', 'tableau-colorblind10', '_classic_test']\n"
+      "['seaborn-dark', 'seaborn-darkgrid', 'seaborn-ticks', 'fivethirtyeight', 'seaborn-whitegrid', 'classic', '_classic_test', 'fast', 'seaborn-talk', 'seaborn-dark-palette', 'seaborn-bright', 'seaborn-pastel', 'grayscale', 'seaborn-notebook', 'ggplot', 'seaborn-colorblind', 'seaborn-muted', 'seaborn', 'Solarize_Light2', 'seaborn-paper', 'bmh', 'tableau-colorblind10', 'seaborn-white', 'dark_background', 'seaborn-poster', 'seaborn-deep']\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.git', '.ipynb_checkpoints', 'EDA.ipynb', 'LinearRegression.ipynb', 'LinearRegression2.ipynb', 'main.py', 'Pipelines_ML.ipynb', 'preprocess_test.ipynb', 'preprocess_train.ipynb', 'Questions.txt', '_database', '_lib']\n"
+      "['EDA.ipynb', '.DS_Store', 'Questions.txt', 'Untitled.ipynb', 'LinearRegression2.ipynb', 'preprocess_test.ipynb', '_database', '_lib', 'Pipelines_ML.ipynb', 'preprocess_train.ipynb', '.ipynb_checkpoints', 'LinearRegression.ipynb', '.git', 'main.py', 'coretcoret.ipynb']\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -194,7 +194,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>60</td>\n",
        "      <td>RL</td>\n",
        "      <td>65.0</td>\n",
@@ -218,7 +218,7 @@
        "      <td>208500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>20</td>\n",
        "      <td>RL</td>\n",
        "      <td>80.0</td>\n",
@@ -242,7 +242,7 @@
        "      <td>181500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>60</td>\n",
        "      <td>RL</td>\n",
        "      <td>68.0</td>\n",
@@ -266,7 +266,7 @@
        "      <td>223500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>70</td>\n",
        "      <td>RL</td>\n",
        "      <td>60.0</td>\n",
@@ -290,7 +290,7 @@
        "      <td>140000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>60</td>\n",
        "      <td>RL</td>\n",
        "      <td>84.0</td>\n",
@@ -346,7 +346,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "34"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "43"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "3"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -597,79 +597,79 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Electrical</th>\n",
+       "      <td>Electrical</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MasVnrType</th>\n",
+       "      <td>MasVnrType</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MasVnrArea</th>\n",
+       "      <td>MasVnrArea</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtQual</th>\n",
+       "      <td>BsmtQual</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtCond</th>\n",
+       "      <td>BsmtCond</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtFinType1</th>\n",
+       "      <td>BsmtFinType1</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtExposure</th>\n",
+       "      <td>BsmtExposure</td>\n",
        "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtFinType2</th>\n",
+       "      <td>BsmtFinType2</td>\n",
        "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageCond</th>\n",
+       "      <td>GarageCond</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageQual</th>\n",
+       "      <td>GarageQual</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageFinish</th>\n",
+       "      <td>GarageFinish</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageType</th>\n",
+       "      <td>GarageType</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageYrBlt</th>\n",
+       "      <td>GarageYrBlt</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LotFrontage</th>\n",
+       "      <td>LotFrontage</td>\n",
        "      <td>259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FireplaceQu</th>\n",
+       "      <td>FireplaceQu</td>\n",
        "      <td>690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Fence</th>\n",
+       "      <td>Fence</td>\n",
        "      <td>1179</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Alley</th>\n",
+       "      <td>Alley</td>\n",
        "      <td>1369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MiscFeature</th>\n",
+       "      <td>MiscFeature</td>\n",
        "      <td>1406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PoolQC</th>\n",
+       "      <td>PoolQC</td>\n",
        "      <td>1453</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -699,7 +699,7 @@
        "PoolQC           1453"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "Name: Electrical, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "(1459, 80)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -860,75 +860,75 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>MasVnrType</th>\n",
+       "      <td>MasVnrType</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MasVnrArea</th>\n",
+       "      <td>MasVnrArea</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtQual</th>\n",
+       "      <td>BsmtQual</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtCond</th>\n",
+       "      <td>BsmtCond</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtFinType1</th>\n",
+       "      <td>BsmtFinType1</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtFinType2</th>\n",
+       "      <td>BsmtFinType2</td>\n",
        "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BsmtExposure</th>\n",
+       "      <td>BsmtExposure</td>\n",
        "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageCond</th>\n",
+       "      <td>GarageCond</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageQual</th>\n",
+       "      <td>GarageQual</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageFinish</th>\n",
+       "      <td>GarageFinish</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageType</th>\n",
+       "      <td>GarageType</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GarageYrBlt</th>\n",
+       "      <td>GarageYrBlt</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LotFrontage</th>\n",
+       "      <td>LotFrontage</td>\n",
        "      <td>259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FireplaceQu</th>\n",
+       "      <td>FireplaceQu</td>\n",
        "      <td>689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Fence</th>\n",
+       "      <td>Fence</td>\n",
        "      <td>1178</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Alley</th>\n",
+       "      <td>Alley</td>\n",
        "      <td>1368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MiscFeature</th>\n",
+       "      <td>MiscFeature</td>\n",
        "      <td>1405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PoolQC</th>\n",
+       "      <td>PoolQC</td>\n",
        "      <td>1452</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -957,7 +957,7 @@
        "PoolQC           1452"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2496,9 +2496,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bitbaseconda56a09cc4ff6643b9bfc821cfaccde2cf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2510,7 +2510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
